package com.plcoding.cleanarchitecturenoteapp.core.util

/**
 * CREATED BY Aagam Koradiya on 11-06-2022
 */

object TestTags {

    const val NOTE_DELETE: String = "note_delete"
    const val ORDER_SECTION = "order_section"
    const val TITLE_TEXT_FIELD = "title_text_field"
    const val CONTENT_TEXT_FIELD = "content_text_field"
    const val NOTE_ITEM = "note_item"
}